Finalised functions and styling

--- a/style.css
+++ b/style.css
@@ -8,11 +8,22 @@
 
 body {
     font-family: "Silkscreen", sans-serif;
+    background: linear-gradient(to right top, #313131, #afafaf);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 header {
+    padding-top: 35px;
+}
+
+.title {
     text-align: center;
-    padding: 2rem;
+    color: white;
+    font-size: 3rem;
+    line-height: 40px;
 }
 
 .main {
@@ -22,7 +33,8 @@ header {
     gap: 100px;
     max-width: 1100px;
     margin: 0 auto;
-    border: 1px solid black;
+    flex: 1;
+    /* border: 1px solid black; */
 }
 
 .tools {
@@ -35,8 +47,17 @@ header {
 }
 
 #color-picker {
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
+    border: 3px solid white;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+    border: none;
 }
 
 button {
@@ -48,24 +69,89 @@ button {
 
 button.active {
     background-color: black;
-    border: 3px solid red;
+    border: 3px solid rgb(255, 26, 190);
     color: white;
 }
 
-input {
-    cursor: pointer;
+#rainbow-btn.active {
+    background: rgb(255,0,0);
+background: linear-gradient(90deg, rgba(255,0,0,0.5) 0%, rgba(255,215,0,0.5018382352941176) 20%, rgba(88,255,130,0.5) 40%, rgba(85,174,255,0.5) 60%, rgba(202,110,255,0.5) 80%, rgba(255,85,239,0.5) 100%);
+    /* background: rgb(255,81,81);
+    background: linear-gradient(90deg, rgba(255,81,81,1) 0%, rgba(255,229,90,1) 20%, rgba(88,255,130,1) 40%, rgba(85,174,255,1) 60%, rgba(202,110,255,1) 80%, rgba(255,85,239,1) 100%); */
 }
+
+.mode-btn {
+    padding: 0;
+    height: 45px;
+    width: 160px;
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    cursor: pointer;
+    width: 9.2rem;
+  }
+
+  input[type='range']::-webkit-slider-runnable-track {
+    height: 12px;
+    border: 1px solid white;
+    background: black;
+  }
+
+  input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 24px;
+    height: 24px;
+    margin-top: -7px;
+    background: rgb(255, 26, 190);
+  }
 
 .slider-container {
     text-align: center;
     display: flex;
     flex-direction: column;
-    gap: 6px;
+    gap: 13px;
+    margin-top: 30px;
 }
 
 .canvas {
     width: 500px;
     height: 500px;
     display: grid;
-    border: 1px solid blue;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.footer {
+    padding: 1.5em 2em;
+    justify-content: center;
+    text-align: center;
+    background-color: black;
+    color: white;
+    font-size: 1rem;
+  }
+  
+  .footer--link {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .footer--link:hover {
+    text-decoration: underline;
+    color: inherit;
+  }
+
+  @media (min-width: 1500px) {
+    header {
+        padding-top: 50px;
+    }
+    .canvas {
+        height: 600px;
+        width: 600px;
+    }
+    .slider-container{
+        margin-top: 50px;
+    }
+  }
